@@ -11,6 +11,7 @@
 * Added io::OutBitStream class for manipulating output bit streams.
 * Added argument check for NULL for lspc::File class methods.
 * Fixed character set encoding bugs for several systems that have limited libiconv.
+* Added clear() and reduce() methods for io::OutMemoryStream.
 - Implemented resource compressor.
 
 === 0.5.7 ===
